# SPHSimPy

./: CMakeLists.txt  README.md  main.cpp
headers/: atom_structure.h  force_utils.h  neighbors.h  simulation.h  smoothing_kernel.h  xyz.h
srcs/: force_utils.cpp  neighbors.cpp  simulation.cpp  smoothing_kernel.cpp  xyz.cpp
tests/: CMakeLists.txt  neighbor_list_test.cpp  smoothing_kernel_test.cpp
xyz_input/: ParticleCreator.py
